Fixed html issue and added custom cool scrollbars

--- a/blogs/assets/blogStyle.css
+++ b/blogs/assets/blogStyle.css
@@ -137,3 +137,8 @@ footer > *::before, footer > *::after {
 .material-symbol {
     font-family: 'Material Symbols Rounded';
 }
+
+/* Hide ugly scrollbars for pre tags */
+pre::-webkit-scrollbar {
+    display: none;
+}
